--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-query-devtools": "^5.66.0",
+    "@tanstack/react-router": "^1.109.2",
     "@tanstack/react-table": "^8.21.2",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
@@ -24,6 +25,7 @@
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.2.0",
     "tailwind": "^4.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss": "^4.0.6",
