--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "css": "^3.0.0",
     "lucide-react": "^0.475.0",
     "react": "^18.3.1",
+    "react-cookie": "^7.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.2.0",
     "tailwind": "^4.0.0",
